Refactor EventService to use DTO and custom exception